deployment/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apartment-oat-ingress
  namespace: apartment-oat
spec:
  ingressClassName: traefik
  rules:
  - host: apartments.daiyooo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apartment-oat-service
            port:
              number: 3000
